# Fr4ctal

./: .gitignore  CMakeLists.txt  default.frag.qsb  shell.qml
components/: BezierRectangle.qml  ImgBezierRectangle.qml  ImgRing.qml  WallaperListPreview.qml
globals/: Globals.qml  Shortcuts.qml  Signals.qml  qmldir
modules/: Clock.qml  Wallpaper.qml
modules/Background/: Background.qml  S3wClone.qml
modules/applets/: Apps.qml  Wallpaper.qml  WallpaperPicker.qml
modules/background/: BezierRectangle.qml  BgLayout.qml  BgMaskRegion.qml  BgPath.qml  BgSettings.qml  BgShapesSettings.qml  BgWindow.qml  Compositor.frag  Compositor.frag.qsb  Fps.qml  qmldir
modules/background/sdfs/: BezierRectangle.frag
modules/bars/: Bar.qml
modules/random/: CanvasBg.qml  ShapeBg.qml  cBezierRectSt.frag  default.frag  rand.qml
modules/random/attempts/: CanvasBg.qml  ShapeBg.qml  a-eip.c  a-eis.c  cBezierSt.frag  cBezierStBs.frag  nn  nn.c  tui  tui.c
modules/wallpaper/: ImageSelector.qml  ImageSelector2.qml  S3wClone.qml  WallapaperScrollable.qml  Wallpaper.qml  WallpaperListPreview.qml  WallpaperSettings.qml  old.qml  qmldir
plugins/: CMakeLists.txt  FpsText.cpp  FpsText.h  XyraPluginsPlugin.cpp  XyraPluginsPlugin.h
